// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return the default project setup 1`] = `
Object {
  "anonymizeIp": true,
  "autoLink": Array [],
  "autoTrack": Object {
    "cleanUrlTracker": Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
    "urlChangeTracker": true,
  },
  "clientId": null,
  "sendInitialPageView": true,
  "temporarySession": false,
  "userId": null,
}
`;

exports[`should return two custom project names as a set 1`] = `
Array [
  "MyTracker0",
  "MyTracker1",
]
`;

exports[`should return two project names as a set 1`] = `
Array [
  "UAPROJECTID0",
  "UAPROJECTID1",
]
`;

exports[`should return two project names as an array 1`] = `
Array [
  "UAPROJECTID0",
  "UAPROJECTID1",
]
`;

exports[`should send an event for two configured projects 1`] = `
Array [
  Array [
    "create",
    "UA-PROJECT-ID-0",
    "auto",
    Object {
      "allowLinker": false,
      "name": "UAPROJECTID0",
    },
  ],
  Array [
    "UAPROJECTID0.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "UAPROJECTID0.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "UAPROJECTID0.require",
    "urlChangeTracker",
  ],
  Array [
    "UAPROJECTID0.send",
    "pageview",
  ],
  Array [
    "create",
    "UA-PROJECT-ID-1",
    "auto",
    Object {
      "allowLinker": false,
      "name": "UAPROJECTID1",
    },
  ],
  Array [
    "UAPROJECTID1.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "UAPROJECTID1.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "UAPROJECTID1.require",
    "urlChangeTracker",
  ],
  Array [
    "UAPROJECTID1.send",
    "pageview",
  ],
  Array [
    "UAPROJECTID0.send",
    "pageview",
    undefined,
  ],
  Array [
    "UAPROJECTID1.send",
    "pageview",
    undefined,
  ],
]
`;

exports[`should send events to two projects with custom names 1`] = `
Array [
  Array [
    "create",
    "UA-PROJECT-ID-3",
    "auto",
    Object {
      "allowLinker": false,
      "name": "UAPROJECTID3",
    },
  ],
  Array [
    "UAPROJECTID3.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "UAPROJECTID3.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "UAPROJECTID3.require",
    "urlChangeTracker",
  ],
  Array [
    "UAPROJECTID3.send",
    "pageview",
  ],
  Array [
    "create",
    "UA-PROJECT-ID-4",
    "auto",
    Object {
      "allowLinker": false,
      "name": "UAPROJECTID4",
    },
  ],
  Array [
    "UAPROJECTID4.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "UAPROJECTID4.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "UAPROJECTID4.require",
    "urlChangeTracker",
  ],
  Array [
    "UAPROJECTID4.send",
    "pageview",
  ],
  Array [
    "create",
    "UA-PROJECT-ID-7",
    "auto",
    Object {
      "allowLinker": false,
      "name": "UAPROJECTID7",
    },
  ],
  Array [
    "UAPROJECTID7.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "UAPROJECTID7.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "UAPROJECTID7.require",
    "urlChangeTracker",
  ],
  Array [
    "UAPROJECTID7.send",
    "pageview",
  ],
  Array [
    "create",
    "UA-PROJECT-ID-0",
    "auto",
    Object {
      "allowLinker": false,
      "name": "MyTracker0",
    },
  ],
  Array [
    "MyTracker0.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "MyTracker0.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "MyTracker0.require",
    "urlChangeTracker",
  ],
  Array [
    "MyTracker0.send",
    "pageview",
  ],
  Array [
    "create",
    "UA-PROJECT-ID-1",
    "auto",
    Object {
      "allowLinker": false,
      "name": "MyTracker1",
    },
  ],
  Array [
    "MyTracker1.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "MyTracker1.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "MyTracker1.require",
    "urlChangeTracker",
  ],
  Array [
    "MyTracker1.send",
    "pageview",
  ],
  Array [
    "MyTracker0.send",
    "pageview",
    undefined,
  ],
  Array [
    "MyTracker1.send",
    "pageview",
    undefined,
  ],
]
`;

exports[`should setup a single UA project (without autotrack.js) 1`] = `
Array [
  Array [
    "create",
    "UA-PROJECT-ID",
    "auto",
    Object {
      "allowLinker": false,
      "name": "UAPROJECTID",
    },
  ],
  Array [
    "UAPROJECTID.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "UAPROJECTID.send",
    "pageview",
  ],
]
`;

exports[`should setup a single UA project with a \`clientId\` 1`] = `
Array [
  Array [
    "create",
    "UA-PROJECT-ID",
    "auto",
    Object {
      "allowLinker": false,
      "clientId": "my-client-id",
      "name": "UAPROJECTID",
    },
  ],
  Array [
    "UAPROJECTID.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "UAPROJECTID.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "UAPROJECTID.require",
    "urlChangeTracker",
  ],
  Array [
    "UAPROJECTID.send",
    "pageview",
  ],
]
`;

exports[`should setup a single UA project with a \`userId\` 1`] = `
Array [
  Array [
    "create",
    "UA-PROJECT-ID",
    "auto",
    Object {
      "allowLinker": false,
      "name": "UAPROJECTID",
      "userId": "my-user-id",
    },
  ],
  Array [
    "UAPROJECTID.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "UAPROJECTID.send",
    "pageview",
  ],
]
`;

exports[`should setup a single UA project with a session cookie 1`] = `
Array [
  Array [
    "create",
    "UA-PROJECT-ID",
    "auto",
    Object {
      "allowLinker": false,
      "cookieExpires": 0,
      "cookieName": "_ga-zero",
      "name": "UAPROJECTIDsession",
    },
  ],
  Array [
    "UAPROJECTIDsession.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "UAPROJECTIDsession.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "UAPROJECTIDsession.require",
    "urlChangeTracker",
  ],
  Array [
    "UAPROJECTIDsession.send",
    "pageview",
  ],
]
`;

exports[`should setup a single google UA project (no autolink) 1`] = `
Array [
  Array [
    "create",
    "UA-PROJECT-ID",
    "auto",
    Object {
      "allowLinker": false,
      "name": "UAPROJECTID",
    },
  ],
  Array [
    "UAPROJECTID.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "UAPROJECTID.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "UAPROJECTID.require",
    "urlChangeTracker",
  ],
  Array [
    "UAPROJECTID.send",
    "pageview",
  ],
]
`;

exports[`should setup a single google UA project (with autolink) 1`] = `
Array [
  Array [
    "create",
    "UA-PROJECT-ID",
    "auto",
    Object {
      "allowLinker": true,
      "name": "UAPROJECTID",
    },
  ],
  Array [
    "UAPROJECTID.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "UAPROJECTID.require",
    "linker",
  ],
  Array [
    "UAPROJECTID.linker:autoLink",
    Array [
      "www.domain1.at",
      "www.domain2.at",
    ],
  ],
  Array [
    "UAPROJECTID.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "UAPROJECTID.require",
    "urlChangeTracker",
  ],
  Array [
    "UAPROJECTID.send",
    "pageview",
  ],
]
`;

exports[`should setup two google UA project (with autolink) 1`] = `
Array [
  Array [
    "create",
    "UA-PROJECT-ID-0",
    "auto",
    Object {
      "allowLinker": true,
      "name": "UAPROJECTID0",
    },
  ],
  Array [
    "UAPROJECTID0.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "UAPROJECTID0.require",
    "linker",
  ],
  Array [
    "UAPROJECTID0.linker:autoLink",
    Array [
      "www.domain1.at",
      "www.domain2.at",
    ],
  ],
  Array [
    "UAPROJECTID0.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "UAPROJECTID0.require",
    "urlChangeTracker",
  ],
  Array [
    "UAPROJECTID0.send",
    "pageview",
  ],
  Array [
    "create",
    "UA-PROJECT-ID-1",
    "auto",
    Object {
      "allowLinker": true,
      "name": "UAPROJECTID1",
    },
  ],
  Array [
    "UAPROJECTID1.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "UAPROJECTID1.require",
    "linker",
  ],
  Array [
    "UAPROJECTID1.linker:autoLink",
    Array [
      "www.domain3.at",
      "www.domain3.at",
    ],
  ],
  Array [
    "UAPROJECTID1.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "UAPROJECTID1.require",
    "urlChangeTracker",
  ],
  Array [
    "UAPROJECTID1.send",
    "pageview",
  ],
]
`;
